# background-service-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: abort_blocking.rs  blocking.rs  cancel_service.rs  example.rs  spawn.rs  take_service.rs
src/: background_service_manager.rs  error.rs  lib.rs  manager.rs  manager_wasm.rs  service_context.rs  service_context_wasm.rs  service_info.rs  service_info_wasm.rs
src/native/: manager.rs  mod.rs  service_context.rs  service_info.rs
src/wasm/: manager.rs  service_context.rs  service_info.rs
