[package]
edition = "2021"
name = "background-service"
version = "0.1.0"

[dependencies]
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1"
dashmap = "5"

[features]
signal = ["tokio/signal"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3.18"
