[package]
edition = "2021"
name = "background-service"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["time", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1"
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
    "all",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dashmap = "6"

[features]
signal = ["tokio/signal"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3.18"
