[package]
edition = "2024"
name = "background-service"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tracing = "0.1"
wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
  "all",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dashmap = "6"

[features]
signal = ["tokio/signal"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3.18"
